deploy: 8edda79957e296be9d41e45863e2f354f549bb7d

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html><body>
-<h1>Deploy Status</h1>
-<p>Last deploy: Wed Feb 18 03:24:17 UTC 2026</p>
-<p>Commit: 85b5fbe5804c8fb59e6bdb34531001bd6064d3eb</p>
+<h1>SU PAGINA FUNCIONO CORRECTAMENTE IDIOTO</h1>
+<p>Pasó todos sus mkas test</p>
+<p>Last deploy: Wed Feb 18 03:39:30 UTC 2026</p>
+<p>Commit: 8edda79957e296be9d41e45863e2f354f549bb7d</p>
 </body></html>
